Introduce backandforth prototype, Remove tools
Sounds sexual doesn't it?

Let's use our system toolchain while we wait for bazel integration.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-# envrc for using https://direnv.net to load activate.sh
-.envrc
-
-# tools generated at setup-time
-tools/rustup-init.sh
-tools/rustup
-tools/cargo
-activate.sh
+# build artifacts
+target
