--- a/stutterd/Cargo.toml
+++ b/stutterd/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 anyhow = "1.0.32"
 mumble-protocol = { path = "../mumble-protocol" }
 futures = "0.3.5"
+log = "0.4.11"
 rand = "0.7.3"
 tokio = { version = "0.2.22", features = ["full"] }
 tokio-util = "0.3.1"
