--- a/stuttertui/Cargo.toml
+++ b/stuttertui/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.32"
-mumble-protocol = { path = "../mumble-protocol" }
 futures = "0.3.5"
+mumble-protocol = { path = "../mumble-protocol" }
 tokio = { version = "0.2.22", features = ["full"] }
 tokio-util = "0.3.1"
+tui = "0.10.0"
+termion = "1.5"
