--- a/stammer/Cargo.toml
+++ b/stammer/Cargo.toml
@@ -12,7 +12,6 @@ mumble-protocol = { path = "../mumble-protocol" }
 fern = "0.6.0"
 futures = "0.3.5"
 log = "0.4.11"
-rand = "0.7.3"
 tokio = { version = "0.2.22", features = ["full"] }
 tokio-util = "0.3.1"
 
@@ -26,5 +25,5 @@ name = "stammer"
 path = "src/lib.rs"
 
 [[bin]]
-name = "stammerd"
+name = "stammer"
 path = "src/main.rs"
