--- a/stutter/Cargo.toml
+++ b/stutter/Cargo.toml
@@ -8,16 +8,23 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.32"
+bytes = "0.5.6"
 futures = "0.3.5"
 fern = "0.6.0"
 log = "0.4.11"
 cpal = "0.12.1"
-stammer = { path = "../stammer" }
+opus = "0.2.1"
 mumble-protocol = { path = "../mumble-protocol" }
+ringbuf = "0.2.2"
 tokio = { version = "0.2.22", features = ["full"] }
 tokio-util = "0.3.1"
 tui = "0.10.0"
 termion = "1.5"
+
+[profile.dev]
+panic = "abort"
+[profile.release]
+panic = "abort"
 
 [lib]
 name = "stutter"
